# linear-algebra

./: CMakeLists.txt  main.cpp
include/: matrix.h
src/: matrix.cpp
